# python-skeleton-library

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .env.dist  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .python-version  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  docker-compose.debug.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  setup.py  tox.ini
.githooks/: pre-commit
.github/workflows/: build.yml  pr.yml
src/: response_getter.py  skeleton.py
tests/: test_response_getter.py  test_skeleton.py
