[tool.poetry]
name = "python-skeleton-library"
version = "0.1.0"
description = "Python Skeleton Library"
authors = ["Cristian Angulo <cristianangulonova@gmail.com, cristian@nietzscheson.com>"]

[tool.poetry.dependencies]
python = "3.9.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
factory-boy = "^3.2.1"


[tool.poetry.group.lint.dependencies]
tox = "==3.24.5"
pre-commit = "==2.17.0"
black = "==21.12b0"
isort = "==5.10.1"
flake8 = "==4.0.1"
safety= "==1.10.3"
coverage = "==6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
